search.js - got save button to move gifs into Save tab and remove save button; index.html - removed test img; style.css - fixed odd width scroll, still working on alignment of save and play button

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -118,6 +118,7 @@
 		margin: auto !important;
 		top: 0;
 		opacity: 0;
+		float: left;
 	}
 
 	.gifBtn {
